// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  // NOTE: https://dbdiagram.io/home
  provider            = "prisma-dbml-generator"
  projectDatabaseType = "PostgreSQL"
}

model User {
  id              Int       @id @default(autoincrement())
  name            String
  phone           String
  email           String    @unique
  password        String
  createdAt       DateTime  @default(now())
  updateAt        DateTime  @updatedAt
  userType        UserType
  homes           Home[]
  buyerMessages   Message[] @relation("buyerMessages")
  realtorMessages Message[] @relation("realtorMessages")
}

model Home {
  id                Int          @id @default(autoincrement())
  address           String
  numberOfBedrooms  Int
  numberOfBathrooms Float
  city              String
  listedDate        DateTime     @default(now())
  price             Float
  landSize          Float
  propertyType      PropertyType
  createdAt         DateTime     @default(now())
  updateAt          DateTime     @updatedAt
  images            Image[]
  realtorId         Int
  realtor           User         @relation(fields: [realtorId], references: [id])
  messages          Message[]
}

model Image {
  id        Int      @id @default(autoincrement())
  url       String
  createdAt DateTime @default(now())
  updateAt  DateTime @updatedAt
  homeId    Int
  home      Home     @relation(fields: [homeId], references: [id])
}

model Message {
  id        Int    @id @default(autoincrement())
  message   String
  homeId    Int
  home      Home   @relation(fields: [homeId], references: [id])
  realtorId Int
  realtor   User   @relation("realtorMessages", fields: [realtorId], references: [id])
  buyerId   Int
  buyer     User   @relation("buyerMessages", fields: [buyerId], references: [id])
}

enum PropertyType {
  RESIDENTIAL
  CONDO
}

enum UserType {
  BUYER
  REALTOR
  ADMIN
}
